--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ python = "~3.9"
 pandas = "^1.4.2"
 numpy = "^1.22.4"
 scikit-learn = "^1.1.1"
+imbalanced-learn = "^0.9.1"
+lightgbm = "^3.3.2"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^6.13.0"
